[package]
name = "tokio-telegraf"
version = "0.1.0"
authors = ["Matteo Bigoi <bigo@crisidev.org>"]
edition = "2021"
repository = "https://github.com/crisidev/tokio-telegraf"
description = "Minimal async rust wrapper for the telegraf/influxdb protocol, based on Tokio"
license = "MIT"
readme = "README.md"
keywords = ["telegraf", "influxdb", "metrics", "tokio", "async"]
categories = ["asynchronous", "database"]

[workspace]
members = ["tests", "telegraf_derive"]

[dependencies]
telegraf_derive = { path = "./telegraf_derive" }
tokio = { version = "1", features = ["full"] }
url = "2.5"
