[package]
name = "tokio_telegraf"
version = "0.1.0"
authors = [
    "Matteo Bigoi <bigo@crisidev.org>",
    "Max Mindlin <maxmindlin@gmail.com>",
]
edition = "2021"
repository = "https://github.com/crisidev/tokio-telegraf"
description = "Minimal async rust wrapper for the telegraf/influxdb protocol, based on Tokio"
license = "MIT"
readme = "README.md"
keywords = ["telegraf", "influxdb", "metrics", "tokio", "async"]
categories = ["asynchronous", "database"]

[workspace]
members = ["tests", "tokio_telegraf_derive"]

[dependencies]
tokio_telegraf_derive = { path = "./tokio_telegraf_derive" }
tokio = { version = "1", features = ["full"] }
url = "2.5"
