[package]
name = "tokio_telegraf_derive"
version = "0.1.0"
authors = [
    "Matteo Bigoi <bigo@crisidev.org>",
    "Max Mindlin <maxmindlin@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/crisidev/tokio_telegraf"
description = "Derive macros for the tokio_telegraf library"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
